fixed inputs on ios

--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,8 @@ body::-webkit-scrollbar {
   grid-column: 2/16;
   -webkit-transition: all 0.6s ease;
   transition: all 0.6s ease;
+  border-radius: 0;
+  -webkit-appearance: none;
 }
 
 .form__input:focus {
